<resources>
    <string name="app_name">Kaizer</string>

    <string name="about_me">обо мне</string>
    <string name="basic_test">базовый тест</string>
    <string name="answertest">ответы </string>
    <string name="download">Загружено скоро ознакомлюсь</string>
    <string name="tasks">Задания</string>
    <string name="test">Тест</string>
    <string name="answerGirl">Ответы белок</string>
    <string name="creatQeustTxt">создать вопрос</string>
    <string name="startQuestion">пройти опрос</string>
    <string name="readMystery">читать рассказы</string>
    <string name="more">Больше</string>
    <string name="newMessage">message</string>


    <string name="recentlyJoined">Недавно присоединились</string>
    <string name="readstories">Читать выдуманные истории )</string>
    <string name="addstoriesuser">рассказ</string>
    <string name="addstoriesuserdescription">добавить</string>
    <string name="job">задания</string>
    <string name="recentlyjoined">недавно присоединились</string>
    <string name="seejob">смотреть последния задания</string>
    <string name="pay">твоя выплата</string>
    <string name="testhasalreadypassed">тест уже был пройдет</string>
    <string name="you_balance">твой баланс</string>
    <string name="money">Money</string>
    <string name="creattest">создать тест</string>
    <string name="focus">запросить дополнительный тест</string>
    <string name="paidfoto">указать цену альбома</string>

    <string name="requestpayout">запросить выплату</string>
    <string name="registrarion">регистрация</string>
    <string name="txt1">Как получить 3 уровень ? Выполни базовый тест. Заполни свой профиль. Пиши интересные рассказы </string>
    <string name="txt2">Где посмотреть свой профиль ? Левый верхний угол </string>
    <string name="txt3">Как посмотреть свой уроверь ? Информация в твоем профиле</string>
    <string name="txt4">Как получить выплату ? Зайди в свой профиль. Нажми на свой баланс. Укажи куда нужно перевести. Карта/ телефон / киви / крипта / другое</string>
    <string name="txt5">Деньги не приходят! Выплата производится обчно в течении 2-ух часов. Иногда возможны задержки до 24 часов. Внимание! Сначала нужно зарегестрироваться в группе в вк!!! </string>
    <string name="txt6">Как пополнить свой баланс. Бери задания. Проходи тесты. Пиши рассказы. Заполняй профиль.  </string>
    <string name="txt7">Что такое платный Альбом? Его можно посмотреть только если оплатить доступ. Цену альбома указываешь ты.  </string>
    <string name="txt8">Как закрыть свой платный альбом ? Около цены есть ползунок on/off. После того как ты закроешь альбом (off) - его не смогут КУПИТЬ и ПОСМОТРЕТЬ !!! Доступ к альбому будет только у тебя. По умолчанию альбом выключен(off) </string>
    <string name="txt9">Как удалить фото? Нажми на фото пальцем и держи 2 сек.  </string>
    <string name="txt10">Сколько можно вывести? Все зависит от твоего уровня. до 5 уровня 500 в день. Более точная информация появится в твоем профиле на 5 lvl </string>
    <string name="txt12">Как удалить фото ? нажми на фото и держи палец 2 секунды </string>


    <string name="description"> ... </string>
    <string name="upload">загрузить</string>
    <string name="rulesWriteGeneralChat">Непристойные, вульгпрные предложения будут переноситься в эфир 18+ или удаляться модераторами. </string>
    <string name="rulesWriteGeneralChat2"> Правила!</string>





</resources>