<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/katebackg"
    tools:context=".Help_standart">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/topBar"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@drawable/kate"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/question" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="Ответы на часто задаваемые  вопросы"
                    android:textColor="@color/white"
                    android:textSize="17sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/txt1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/txt2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/txt2"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/txt3"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/txt4"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/txt5"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/txt6"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/txt7"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/txt8"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/txt9"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/txt10"
                android:textColor="@color/white" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/CustomTestRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>
    </ScrollView>

<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/creattestbtn"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:background="@drawable/round_back_theeme_1000"-->
<!--        android:text="@string/focus"-->
<!--        android:textColor="@color/white"-->
<!--        android:textStyle="bold" />-->

</RelativeLayout>