<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kaizerActivity">


    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@drawable/kate"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            app:srcCompat="@drawable/iconvibo" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:text="Kaizer"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/message2" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="создать  список кто был или есть" />


            </RelativeLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="30dp">


                <LinearLayout
                    android:id="@+id/recentlyJoined"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/roundedver2"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1"
                        android:paddingLeft="3dp"
                        app:srcCompat="@drawable/fire" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:paddingRight="5dp"
                        android:text="@string/recentlyJoined" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/roundedver2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/more" />
                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="10dp"
                    android:text="@string/seejob" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:text="@string/more" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="создать  список" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/recentlyJoined" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:text="@string/more" />


            </RelativeLayout>


            <Button
                android:id="@+id/answer_belka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answerGirl" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/recentlyJoined" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:text="@string/more" />


            </RelativeLayout>

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/vibostyle3"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/job"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                app:srcCompat="@drawable/task" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tasks" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/basictest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                app:srcCompat="@drawable/test2" />

            <TextView
                android:id="@+id/text54y"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/testRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

<!--            <com.airbnb.lottie.LottieAnimationView-->
<!--                android:id="@+id/animationView"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="60dp"-->
<!--                app:lottie_autoPlay="true"-->
<!--                app:lottie_loop="true"-->
<!--                app:lottie_rawRes="@raw/cube" />-->


        </LinearLayout>

        <LinearLayout
            android:id="@+id/readStories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                app:srcCompat="@drawable/mystery" />

            <TextView
                android:id="@+id/tex325"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/readMystery" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                app:srcCompat="@drawable/question" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="помощь" />

        </LinearLayout>


    </LinearLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="-20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/cube" />


</RelativeLayout>